mixing of chemicals as per ratio done.

--- a/Config/config.ini
+++ b/Config/config.ini
@@ -46,6 +46,19 @@ ion_concentration_in = 0.01
 # Ion concentration of "I" in nutrient solution at the outlet of culture beds in mol/mol
 ion_concentration_out = 0.005
 
+# Nutrient ratios for each plant type (N:P:K)
+lettuce_ratio = [1, 0.5, 1.5]
+broccoli_ratio = [2, 1, 2]
+
+# Nutrient concentrations in each tank (g/L)
+tank1_concentration = 10
+tank2_concentration = 10
+tank3_concentration = 10
+
+# Target EC for each plant type (mS/cm)
+lettuce_target_ec = 1.2
+broccoli_target_ec = 1.8
+
 [Energy]
 # Electricity consumption of water pumps, air fans, etc. in W/m²
 elec_water_pumps = 27.78
@@ -59,6 +72,12 @@ elec_air_conditioners = 83.33
 [Plants]
 # Dry mass increase rate of plants in mol/(m²·s)
 dry_mass_increase_rate = 1.39e-6
+#types of plants available in the agri building
+plant_types = [lettuce, broccoli]
+#number of plants in the agri building
+#number_of_plants = 100
+#The plant type we are farming right now
+current_plant_type = lettuce
 
 [CO2]
 # CO2 released in room air by human respiration in mol/(m²·s)
