--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+output.db
+static.db
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
